--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,5 +8,5 @@
 @using Microsoft.JSInterop
 @using JD_Quiz_Blazor
 @using JD_Quiz_Blazor.Shared
-@using JD_Quiz_Blazor.Components
+@using JD_Quiz_Blazor.Partials
 
